# Readust

./: .dockerignore  .example.env  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.example.yml
.sqlx/: query-012fb6feac9b15a9dadfd6986660f0b6b0b19502ec4adc4c4dd44a8fb55cddcf.json  query-0ecc7aa98a6ab14536f3422c1350c1b84a8ffdae62a0785306cc2381fe36fc7c.json  query-11fc462e95d37c898fd48f51355de5e9757df3b95816a18d1d98dcfaef081385.json  query-13880c1c4ae6023201714e2daf36b5c664f46f34d2556ba35a3c727016238540.json  query-1d83018a72dfcf1021fcefcec77136d33c0c0dff2f328de930342793e8971d16.json  query-35e5b9f67a7cc79c45929d1cf2b639f7316363ece7049ad3babe1bd4c0ac7040.json  query-537bfe86c1b1bf54e371016ef7a68b00d746248d47ea692be51ff0e6a2c1dd19.json  query-574a1c691a1f129dc4e04a3ad22b11f5b825e513674821081f3709e3552413ba.json  query-5a540652c749462212b638142b83aa2f3c57fa0be0ce118f1e1e4e25d2c7e779.json  query-63c41e273784006fb5e61b90f4c18ba970fe5b4b4500c61c9be5476b6a7e9e80.json  query-651611ccad77dbbc4ee52ec22f4e924ae79470dcf341d0055d04969c0ca8bddb.json  query-6d76463b8a9af7181208cc4837820b19f0686f488fa1c645accb863ffe094e05.json  query-6ec2bee9a83adb97642b6160407a760b5d753ca78fc4f906f706db7ed1a7d89b.json  query-71a1327a1a1f579ebeddca5095c67776cc4c3a316bd3952401e04dd05c9de96a.json  query-73def43d21f63af3e813eba0c7a6cd0202351c672aa6c03cddb8bad88a1e65e5.json  query-75b5390fd1a66eba20c884e00fb98aa6bf22f1a45664727e074d30f5af369888.json  query-78a42207fca131422f7037d5f2810724a7d2f2f1fe833919f67b5140f813e5e9.json  (+8 more)
migrations/: 20260421100528_init.sql  (+1 more)
(+26 files in other folders)
