[package]
name = "readust"
version = "0.1.0"
edition = "2024"
description = "A lightweight Readest-compatible backend"
readme = "README.md"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[dependencies]
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.131.0"
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.22"
futures-util = "0.3.32"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "time", "tracing"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "timeout", "trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive", "unic"] }
